Fix colorwheel page alignment

--- a/src/Projects/ColorWheel/ColorWheel.css
+++ b/src/Projects/ColorWheel/ColorWheel.css
@@ -1,4 +1,5 @@
 .color-wheel-container {
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
